fixing layout issues

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,14 +62,12 @@
 }
 
 body {
-  width: 100%;
-  height: 100%;
   font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 html {
-  width: 100%;
-  height: 100%;
+  font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  webkit-tap-highlight-color: #008EDC;
 }
 
 h1,
@@ -195,35 +193,6 @@ a:focus {
   }
 }
 
-.btn-circle {
-  width: 70px;
-  height: 70px;
-  margin-top: 15px;
-  padding: 7px 16px;
-  border: 2px solid #fff;
-  border-radius: 100%!important;
-  font-size: 40px;
-  color: #fff;
-  background: 0 0;
-  -webkit-transition: background .3s ease-in-out;
-  -moz-transition: background .3s ease-in-out;
-  transition: background .3s ease-in-out;
-}
-
-.btn-circle:hover,
-.btn-circle:focus {
-  outline: 0;
-  color: #fff;
-  background: rgba(255,255,255,.1);
-}
-
-.btn-circle i.animated {
-  -webkit-transition-property: -webkit-transform;
-  -webkit-transition-duration: 1s;
-  -moz-transition-property: -moz-transform;
-  -moz-transition-duration: 1s;
-}
-
 .btn-circle:hover i.animated {
   -webkit-animation-name: pulse;
   -moz-animation-name: pulse;
@@ -273,21 +242,6 @@ a:focus {
   padding-top: 100px;
 }
 
-@media(min-width:767px) {
-  .content-section {
-    padding-top: 250px;
-  }
-
-  .download-section {
-    padding: 100px 0;
-  }
-
-  #map {
-    height: 400px;
-    margin-top: 250px;
-  }
-}
-
 .btn {
   border-radius: 0;
   text-transform: uppercase;
@@ -312,14 +266,11 @@ a:focus {
   background-color: #42dca3;
 }
 
-ul.banner-social-buttons {
-  margin-top: 0;
-}
-
 footer {
-  margin-top: -32px;
   p.text-muted {
-    font-size: 12px;
+    margin-bottom: 0;
+    font-size: 11px;
+    margin-top: 15px;
   }
 }
 
@@ -341,10 +292,6 @@ img::selection {
 
 img::-moz-selection {
   background: 0 0;
-}
-
-body {
-  webkit-tap-highlight-color: #008EDC;
 }
 
 @media (min-width: 768px){
@@ -378,3 +325,12 @@ body {
     }
   }
 }
+
+@media(min-width:768px) {
+  p {
+    margin: 0 0 35px;
+    font-size: 20px;
+    line-height: 1.6;
+  }
+}
+
